name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            https://github.com/skilgal/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Dmytro Altsyvanovych
maintainer:          dmytro.altsyvanovych@gmail.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010
